Add grid class to header and nav

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 
-<header>
-  <h1>Solar System</h1>
-  <nav>
+<header class="grid">
+  <h1 class="unit">Solar System</h1>
+  <nav class="unit">
     <ul>
       <li>Planets</li>
       <li>Moons</li>
