Add nav styling

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
 
 <header class="grid">
-  <h1 class="unit">Solar System</h1>
-  <nav class="unit">
+  <h1 class="unit xs-1">Solar System</h1>
+  <nav class="unit xs-1">
     <ul>
-      <li>Planets</li>
-      <li>Moons</li>
-      <li>Exploration</li>
+      <li><a href="#">Planets</a></li>
+      <li><a href="#">Moons</a></li>
+      <li><a href="#">Exploration</a></li>
     </ul>
 </header>
 
