Add style to buttons

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
 
 <header class="grid">
-  <h1 class="unit xs-1">Solar System</h1>
-  <nav class="unit xs-1">
+  <h1 class="unit xs-1 s-1 pad-t-1-2 push-1-2">Solar System</h1>
+  <nav class="unit xs-1 s-1">
     <ul>
-      <li><a href="#">Planets</a></li>
-      <li><a href="#">Moons</a></li>
-      <li><a href="#">Exploration</a></li>
+      <li><a class="island-1-2" href="#">Planets</a></li>
+      <li><a class="island-1-2" href="#">Moons</a></li>
+      <li><a class="island-1-2" href="#">Exploration</a></li>
     </ul>
 </header>
 
