--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 <body>
 
 <header class="grid grid-middle gutter-1-2">
-  <h1 class="unit xs-1 s-1 m-1-3 l-1-3 pad-t-1-2 push-1-2">Solar System</h1>
+  <h1 class="unit xs-1 s-1 m-1-3 l-1-3 pad-t-1-2 push-1-2 peta">Solar System</h1>
   <nav class="unit xs-1 s-1 m-2-3 l-2-3 right">
     <ul>
-      <li><a class="island-1-2" href="#">Planets</a></li>
-      <li><a class="island-1-2" href="#">Moons</a></li>
-      <li><a class="island-1-2" href="#">Exploration</a></li>
+      <li><a class="island-1-2 giga" href="#">Planets</a></li>
+      <li><a class="island-1-2 giga" href="#">Moons</a></li>
+      <li><a class="island-1-2 giga" href="#">Exploration</a></li>
     </ul>
+  </nav>
 </header>
 
 </body>
