--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
 </head>
 <body>
 
-<header class="grid grid-middle gutter-1-2">
-  <h1 class="unit xs-1 s-1 m-1-3 l-1-3 pad-t-1-2 push-1-2 peta">Solar System</h1>
-  <nav class="unit xs-1 s-1 m-2-3 l-2-3 right">
-    <ul>
-      <li><a class="island-1-2 giga" href="#">Planets</a></li>
-      <li><a class="island-1-2 giga" href="#">Moons</a></li>
-      <li><a class="island-1-2 giga" href="#">Exploration</a></li>
-    </ul>
-  </nav>
-</header>
+  <header class="grid grid-middle gutter-1-2">
+    <div class="unit unit xs-1 s-1 m-1-3 l-1-3 pad-t-1-2 push-1-2">
+      <h1 class="peta">Solar System</h1>
+    </div>
+    <nav class="unit xs-1 s-1 m-2-3 l-2-3 right">
+      <ul>
+        <li><a class="island-1-2 giga" href="#">Planets</a></li>
+        <li><a class="island-1-2 giga" href="#">Moons</a></li>
+        <li><a class="island-1-2 giga" href="#">Exploration</a></li>
+      </ul>
+    </nav>
+  </header>
 
 </body>
 </html>
